src/render/snapshots/dlin__render__mermaid__tests__snapshot_direction_tb.snap
---
source: src/render/mermaid.rs
expression: output
---
flowchart TB
    exposure_dashboard>"dashboard"]
    model_orders["orders"]
    model_stg_orders["stg_orders"]
    source_raw_orders(["raw.orders"])
    test_orders_positive{"orders_positive"}

    model_orders ==>|exposure| exposure_dashboard
    model_orders -.->|test| test_orders_positive
    model_stg_orders -->|ref| model_orders
    source_raw_orders -.->|source| model_stg_orders

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    classDef test fill:#1ABC9C,stroke:#333,color:#fff
    classDef exposure fill:#E74C3C,stroke:#333,color:#fff
    class exposure_dashboard exposure
    class model_orders model
    class model_stg_orders model
    class source_raw_orders source
    class test_orders_positive test
