src/render/snapshots/dlin__render__mermaid__tests__snapshot_group_by_directory.snap
---
source: src/render/mermaid.rs
expression: output
---
flowchart LR
    subgraph _other_["(other)"]
        exposure_dashboard>"dashboard"]
    end
    subgraph models_marts["models/marts"]
        model_orders["orders"]
    end
    subgraph models_staging["models/staging"]
        model_stg_orders["stg_orders"]
        source_raw_orders(["raw.orders"])
    end

    model_orders ==>|exposure| exposure_dashboard
    model_stg_orders -->|ref| model_orders
    source_raw_orders -.->|source| model_stg_orders

    classDef model fill:#4A90D9,stroke:#333,color:#fff
    classDef source fill:#27AE60,stroke:#333,color:#fff
    classDef exposure fill:#E74C3C,stroke:#333,color:#fff
    class exposure_dashboard exposure
    class model_orders model
    class model_stg_orders model
    class source_raw_orders source
